--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "4.6",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.1",
+    "react-iframe": "^1.8.0",
+    "react-popper": "^2.2.5",
     "react-scripts": "4.0.3",
+    "reactstrap": "^9.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "scss": "node-sass --watch src/scss -o src/css",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
