--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "4.6",
+    "font-awesome": "^4.7.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-country-flag": "^2.3.1",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
     "react-iframe": "^1.8.0",
